--- a/iron-request.html
+++ b/iron-request.html
@@ -122,8 +122,7 @@ iron-request can be used to perform XMLHttpRequests.
 
       // Note: if we are using the file:// protocol, the status code will be 0
       // for all outcomes (successful or otherwise).
-      return status === 0 ||
-        (status >= 200 && status < 300);
+      return (status >= 200 && status < 300);
     },
 
     /**
