--- a/iron-request.html
+++ b/iron-request.html
@@ -111,9 +111,7 @@ iron-request can be used to perform XMLHttpRequests.
 
     /**
      * Succeeded is true if the request succeeded. The request succeeded if the
-     * status code is greater-than-or-equal-to 200, and less-than 300. Also,
-     * the status code 0 is accepted as a success even though the outcome may
-     * be ambiguous.
+     * status code is greater-than-or-equal-to 200, and less-than 300. 
      *
      * @return {boolean}
      */
